syntax = "proto3";
package category;

option go_package = "proto/category";

service CategoryService {
  rpc SaveCategory(SaveCategoryRequest) returns (SaveCategoryResponse);
  rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryResponse);
}

message SaveCategoryRequest {
  int64 categoryID = 1;
  string name = 2;
}

message SaveCategoryResponse {
    bool success = 1;
    string message = 2;
    Data data = 3;

    message Data {
        string name = 1;
    }
}

message DeleteCategoryRequest {
  int64 categoryID = 1;
}

message DeleteCategoryResponse {
  bool success = 1;
  string message = 2;
}
